[Wiki Home](Home)

### libmp4tag Change Log

<!--

**1.2.11 beta 2023-11---**

-->

**1.2.10 beta 2023-11-28**

* Bug Fixes:
    * Windows: mp4tagcli fixed to properly handle windows command line arguments.
    * Fix test scripts to work on windows.
    * Windows: mp4tag_towide and mp4tag_fromwide changed to public interfaces.

**1.2.9 beta 2023-10-31**

* Bug Fixes:
    * Fix installation of mp4tagcli executable.
    * Re-work build & installation to match cmake methods.

**1.2.8 beta 2023-10-30**

* Bug Fixes:
    * Makefile cleanup; fix static library name on windows.

**1.2.7 beta 2023-9-20**

* Bug Fixes:
    * Fix pkg-config file to install in correct library location.

**1.2.6 beta 2023-9-7**

* Bug Fixes:
    * Fix writing 4-byte numeric values (typo).
    * Fix parse of cover image name.
    * Fix cover image processing.

**1.2.5 beta 2023-9-6**

* Bug Fixes:
    * Fix parsing issues.
    * Fix update of parent container lengths.
    * Fix re-writing bugs.

**1.2.4 beta 2023-9-4**

* Bug Fixes:
    * Windows: Allow for linking with UCRT.
    * Fix tag box length on re-write.
    * Fix stco/co64 update.
    * Fix parent box update.
* Changes:
    * Update mp4tag_read_file api.

**1.2.3 beta 2023-9-2**

* Bug Fixes:
    * Fix windows installation.
    * Install pkgconfig file.

**1.2.2 beta 2023-8-31**

* Bug Fixes:
    * Prevent possible crashes.
    * Fix various internal bugs.
    * Fix windows build.
    * Fix windows file handling on re-write.

**1.2.1 beta 2023-8-29**

* Bug Fixes:
    * Fix disc/track output when total is zero.
    * Fix disc/track parsing issues.
    * Fix memory leak.
    * Fix bug setting new disk/track tag.
    * Fix mp4tag_clean_tags.
* Changes:
    * Create and install pkgconfig file.

**1.2.0 beta 2023-8-28**

* Bug Fixes:
    * Fix crash when taglist is present but empty.
    * Recognize more files as mp4.
* New Features:
    * New mp4tag_set_binary_tag() routine.
    * Added wiki documentation.

**1.1.1 beta 2023-8-27**
